--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require("path");
 
 module.exports = {
-  "config": path.resolve("db", "config", "config.js"), // alterado após mover as pastas geradas pelo sequelize-cli para a pasta db
+  config: path.resolve("db", "config", "config.js"), // alterado após mover as pastas geradas pelo sequelize-cli para a pasta db
   "models-path": path.resolve("db", "models"),
   "seeders-path": path.resolve("db", "seeders"),
   "migrations-path": path.resolve("db", "migrations"),
